# viexpr

./: .clang-format  CMakeLists.txt  CMakePresets.json  viexpr.code-workspace
files/: analyze.csv  expressions.csv  expressions2.csv
include/: app.hpp  entry.h  eval.h  nums.h  process.h  str.h  streamio.h  token.h  utils.h  vec.h
src/: app.cpp  entry.c  eval.c  main.cpp  nums.c  process.c  str.c  streamio.c  token.c  utils.c  vec.c
src/templates/: index.html  index.txt
vcpkg/installed/vcpkg/info/: webview2_1.0.3650.58_x64-mingw-static.list  webview2_1.0.3650.58_x86-mingw-static.list  wil_1.0.250325.1_x64-mingw-static.list  wil_1.0.250325.1_x86-mingw-static.list
vcpkg/installed/x64-mingw-static/share/webview2/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-mingw-static/share/wil/: vcpkg.spdx.json  vcpkg_abi_info.txt  wilConfig.cmake
vcpkg/installed/x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x86-mingw-static/share/webview2/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/installed/x86-mingw-static/share/wil/: vcpkg.spdx.json  vcpkg_abi_info.txt
